--- a/3540 Final/Assembly-CSharp.csproj
+++ b/3540 Final/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\Enemy.cs" />
     <Compile Include="Assets\SceneManagerScript.cs" />
     <Compile Include="Assets\PlayAudioOnDescent.cs" />
+    <Compile Include="Assets\LevelManager.cs" />
     <Compile Include="Assets\IntroScene.cs" />
     <Compile Include="Assets\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\PlayerShooting.cs" />
