--- a/3540 Final/Assembly-CSharp.csproj
+++ b/3540 Final/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     <Analyzer Include="C:\Program Files\Unity 2022.3.27f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\EnemyImproved.cs" />
     <Compile Include="Assets\MessengerScript.cs" />
     <Compile Include="Assets\InitialSceneLoader.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Assets\Scripts\MouseLook.cs" />
     <Compile Include="Assets\PlayerPokerScript.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\ReticleLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
